<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PreferencesActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="name">Insert Name</string>
    <string name="surname">Insert Surname</string>
    <string name="age">Insert Age</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>

</resources>